force-app/main/default/objects/Intf_Sync_Field__mdt/fields/Interface__c.field-meta.xml
<CustomField>
    <fullName>Interface__c</fullName>
    <label>Interface</label>
    <referenceTo>Intf_Interface__mdt</referenceTo>
    <relationshipLabel>Intf_Sync_Field</relationshipLabel>
    <relationshipName>Intf_Sync_Field</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>