force-app/main/default/objects/Intf_Sync_Field__mdt/fields/Related_object__c.field-meta.xml
<CustomField>
    <fullName>Related_object__c</fullName>
    <label>Related object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>