force-app/main/default/objects/Intf_Sync_Field__mdt/fields/SFDC_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SFDC_API_Name__c</fullName>
    <label>SFDC API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>