force-app/main/default/objects/Intf_Sync_Field__mdt/fields/Target_System__c.field-meta.xml
<CustomField>
    <fullName>Target_System__c</fullName>
    <label>Target System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECV</fullName>
                <default>true</default>
                <label>ECV</label>
            </value>
            <value>
                <fullName>CDN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>