force-app/main/default/objects/Intf_Sync_Field__mdt/listViews/CDN.listView-meta.xml
<ListView>
    <fullName>CDN</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Active__c</columns>
    <columns>Interface__c</columns>
    <columns>Object__c</columns>
    <columns>Related_object__c</columns>
    <columns>SFDC_API_Name__c</columns>
    <columns>Target_System__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Target_System__c</field>
        <operation>equals</operation>
        <value>CDN</value>
    </filters>
    <label>CDN</label>
    <language>en_US</language>
</ListView>